# asyncpg-stubs

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cliff.toml  mise.ci.toml  mise.toml  mypy.ini  pyproject.toml  stubtest-allow.txt
.dependabot/: config.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: lint.yml  release-pr.yml  release.yml
asyncpg-stubs/: __init__.py  __init__.pyi  _asyncio_compat.pyi  cluster.pyi  compat.pyi  connect_utils.pyi  connection.pyi  connresource.pyi  cursor.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  serverversion.pyi  transaction.pyi  types.pyi  utils.pyi
asyncpg-stubs/_testbase/: __init__.pyi  fuzzer.pyi
asyncpg-stubs/exceptions/: __init__.pyi  _base.pyi
asyncpg-stubs/pgproto/: exceptions.pyi  pgproto.pyi  types.pyi
asyncpg-stubs/protocol/: __init__.pyi  protocol.pyi  record.pyi
docs/: RELEASE_PROCESS.md
mise-tasks/: release  release-pr
scripts/: release.sh
tests/: test_connection.py  test_generic_defaults.py  test_pool.py  test_prepared_stmt.py  test_types.py
