[tool.poetry]
name = "asyncpg-stubs"
version = "0.27.1.dev0"
description = "asyncpg stubs"
homepage = "https://github.com/bryanforbes/asyncpg-stubs"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "asyncpg-stubs" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = ">=0.27,<0.28"
typing-extensions = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"
flake8 = "^5.0"
flake8-pyi = "^23.1.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
mypy = ">=0.991"

[tool.black]
line-length = 88
target-version = ["py37"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | external
)/
'''

[tool.isort]
known_first_party = ["asyncpg"]
extra_standard_library = ["_typeshed", "typing_extensions"]
virtual_env = ".venv"
profile = "black"
combine_as_imports = true

[tool.mypy]
python_version = "3.7"
incremental = true
strict = true

[tool.pyright]
include = ["asyncpg-stubs", "tests"]

pythonVersion = "3.7"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
