[tool.poetry]
name = "asyncpg-stubs"
version = "0.30.2"
description = "asyncpg stubs"
homepage = "https://github.com/bryanforbes/asyncpg-stubs"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "asyncpg-stubs" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = ">=0.30,<0.31"
typing-extensions = "^4.13.0"

[tool.poetry.group.dev.dependencies]
async-timeout = "5.0.1"
pre-commit = "3.5.0"
pyright = {version = "1.1.402", extras = ["nodejs"]}
mypy = "1.14.1"
ruff = "0.12.1"

[tool.ruff]
extend-exclude = [".venv*"]
line-length = 88
target-version = "py38"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "ANN", "B", "B9", "BLE", "C", "C4", "E", "EXE", "F", "G",
  "I", "I002", "ISC", "INP", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET",
  "RSE", "S", "SIM", "T10", "T20", "TCH", "TID251", "TRY", "UP", "W", "RUF"
]
ignore = ["ANN401", "PLR0913", "PLR2004", "TRY003", "RUF022", "RUF023"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501", "E701", "E741", "F401", "F403", "F405", "F811"]
"tests/*.py" = ["PGH003", "PLR0912", "S101"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_types", "_typeshed"]
known-first-party = ["asyncpg"]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
python_version = "3.8"
incremental = true
strict = true

[tool.pyright]
include = ["asyncpg-stubs", "tests"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.8"
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
