[project]
name = "asyncpg-stubs"
version = "0.31.3.dev0"
description = "asyncpg stubs"
authors = [
  {name = "Bryan Forbes", email = "bryan@reigndropsfall.net"},
]
license = "BSD-3-Clause"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["classifiers"]
requires-python = ">=3.9,<4.0"
dependencies = [
  "asyncpg >=0.31, <0.32",
  "typing-extensions >=4.13.0, <5.0.0",
]

[project.urls]
Homepage = "https://github.com/bryanforbes/asyncpg-stubs"

[dependency-groups]
dev = [
  "async-timeout ==5.0.1",
  # Mark this as 3.10+ to get the latest version
  "pre-commit ==4.5.1 ; python_version >= '3.10' and python_version < '4.0'",
  "pyright[nodejs] ==1.1.408",
  "mypy ==1.19.1",
  "ruff ==0.15.4",
]

[tool.poetry]
packages = [
  { include = "asyncpg-stubs" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]

[tool.ruff]
extend-exclude = [".venv*"]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "ANN", "B", "B9", "BLE", "C", "C4", "E", "EXE", "F", "G",
  "I", "I002", "ISC", "INP", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET",
  "RSE", "S", "SIM", "T10", "T20", "TCH", "TID251", "TRY", "UP", "W", "RUF"
]
ignore = ["ANN401", "PLR0913", "PLR2004", "TRY003", "RUF022", "RUF023"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501", "E701", "E741", "F401", "F403", "F405", "F811"]
"tests/*.py" = ["PGH003", "PLR0912", "S101"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_types", "_typeshed"]
known-first-party = ["asyncpg"]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
python_version = "3.9"
incremental = true
strict = true

[tool.pyright]
include = ["asyncpg-stubs", "tests"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.9"
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
